Refactor WebConfig for CORS configuration