@@ -8,37 +8,46 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class WebConfig {
 
     @Bean
-    @Order(Ordered.HIGHEST_PRECEDENCE)  
+    @Order(Ordered.HIGHEST_PRECEDENCE)
     public CorsFilter corsFilter() {
+
         CorsConfiguration config = new CorsConfiguration();
 
         config.setAllowCredentials(true);
 
         config.setAllowedOrigins(List.of(
-            "https://nexus-smart-ai.vercel.app",
-            "http://localhost:5173"
-         ));
+                "https://nexus-smart-ai.vercel.app",
+                "http://localhost:5173"
+        ));
+
+        config.setAllowedMethods(List.of(
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"
+        ));
 
         config.setAllowedHeaders(List.of("*"));
 
-        config.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"
-        ));
-
-        config.setExposedHeaders(Arrays.asList(
-            "Authorization", "Content-Type", "Set-Cookie"
+        config.setExposedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Set-Cookie"
         ));
 
         config.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
         source.registerCorsConfiguration("/**", config);
 
         return new CorsFilter(source);
